--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Weather App</h1>
+    <h1>Weather Forecast</h1>
+
     <form id="cityForm">
-        <input type="text" id="cityInput" placeholder="Enter city name" required>
+        <input type="text" id="cityInput" placeholder="Enter city name..." required>
         <button type="submit">Get Weather</button>
     </form>
-    <div id="weather">
-        <!-- Weather data will be inserted here -->
+
+    <div id="weather" class="card">
+        <!-- Weather data will be displayed here -->
     </div>
+
+    <div id="hourly" class="card">
+        <!-- Hourly forecast data will be displayed here -->
+    </div>
+
+    <div id="daily" class="card">
+        <!-- Daily forecast data will be displayed here -->
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
